--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -2,6 +2,36 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <style>
+      body{
+        background-color: #c1e7e8;
+      }
+      #errorui{
+        background-color: white;
+        background: radial-gradient(circle, rgba(215,214,215,1) 0%, rgba(180,180,180,1) 100%);
+        border-style: solid;
+        border-color: blue;
+        border-radius: 20px;
+      }
+      #error{
+        color: red;
+      }
+      #errormessageui{
+        background-color: white;
+        background: radial-gradient(circle, rgba(215,214,215,1) 0%, rgba(180,180,180,1) 100%);
+        border-style: solid;
+        border-color: black;
+        border-radius: 20px;
+      }
+      #errormessage{
+        text-align: center;
+      }
+      #credits{
+        background-color: white;
+        border-radius: 80px;
+        justify-content: center;
+      }
+    </style>
   </head>
   <body>
     <h1 id="error">エラーが発生しました。特定のファイルが見つかりませんでした。</h1>
@@ -10,3 +40,5 @@
     <span id="author">
       by script1000
     </span>
+  </body>
+</html>
